--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>blog</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_3ljbwwwelogeewmi.css">
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>blog</title>
+  <link href="http://fonts.googleapis.com/css?family=Montserrat|Roboto:400,400italic,600|Roboto+Mono" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_3ljbwwwelogeewmi.css">
+  <link rel="stylesheet" href="static/common.css">
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
