--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>blog</title>
-  <link href="http://fonts.googleapis.com/css?family=Montserrat|Roboto:400,400italic,600|Roboto+Mono" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Montserrat|Roboto:400,400italic,600|Roboto+Mono" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_3ljbwwwelogeewmi.css">
   <link rel="stylesheet" href="static/common.css">
 </head>
